# MCTS_LLM

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
aws/: launch_instance.md  setup.sh
configs/: eval_config.yaml  grpo_config.yaml  mcts_config.yaml  sft_config.yaml  vllm_config.yaml
docs/: implementation_plan.md
scripts/: inspect_tree.py  run_ablations.py  run_eval.py  run_grpo.py  run_loop.py  run_mcts.py  run_sft.py  start_vllm_server.sh
setup/: launch_instance.md  setup.sh  spot_training.sh
src/data/: curriculum.py  download.py  mcts_dataset.py  preprocess.py
src/evaluation/: evaluator.py  metrics.py
src/inference/: prompt_builder.py  vllm_client.py
src/mcts/: backpropagation.py  expansion.py  extract.py  node.py  selection.py  simulation.py  tree.py
src/pipeline/: ablation_runner.py  self_improvement_loop.py
src/rewards/: accuracy.py  answer_extraction.py  format_reward.py  qvalue_reward.py
src/sandbox/: executor.py
src/training/: data_loader.py  grpo_runner.py  sft_runner.py
tests/: test_answer_extraction.py  test_data_loading.py  test_mcts_node.py  test_prompt_builder.py  test_rewards.py  test_sandbox_executor.py  test_uct_selection.py
tests/integration/: test_grpo_training.py  test_mcts_end_to_end.py
